# lisa-loop

./: .gitignore  AGENTS.md  BRIEF.md  CLAUDE.md  Cargo.toml  PLAN.md  PROMPT_build.md  PROMPT_methodology.md  PROMPT_plan.md  PROMPT_review.md  PROMPT_triage.md  README.md  REVIEW.md  SUBSYSTEMS.md  lisa-loop-v2-design-final.md  lisa.conf  loop.sh
.devcontainer/: devcontainer.json
methodology/: assumptions-register.md  coupling-strategy.md  overview.md  verification-cases.md
plots/: REVIEW.md
prompts/: PROMPT_ascend.md  PROMPT_audit.md  PROMPT_bounds.md  PROMPT_build.md  PROMPT_ddv_agent.md  PROMPT_ddv_red.md  PROMPT_descend.md  PROMPT_execute.md  PROMPT_explore.md  PROMPT_finalize.md  PROMPT_init.md  PROMPT_planning.md  PROMPT_refine.md  PROMPT_refine_methodology.md  PROMPT_refine_plan.md  PROMPT_research.md  PROMPT_scope.md  PROMPT_subsystem_build.md  PROMPT_subsystem_refine.md  PROMPT_system_validate.md  PROMPT_validate.md  PROMPT_validation_design.md
skills/: dimensional_analysis.md  engineering_judgment.md  literature_grounding.md  numerical_stability.md
spiral/: current-state.md
src/: agent.rs  cli.rs  config.rs  enforcement.rs  git.rs  main.rs  orchestrator.rs  prompt.rs  review.rs  state.rs  tasks.rs  terminal.rs  usage.rs
templates/: agents.md  assignment.md  assumptions_register.md  brief.md  convergence_log.md  ddv_manifest.md  ddv_scenarios.md  lisa_claude.md  overview.md  plan.md  plots_review.md  progress_log.md  stack.md  verification_cases.md
validation/: convergence-log.md  limiting-cases.md  reference-data.md  sanity-checks.md
(+12 files in other folders)
