[package]
name = "lisa-loop"
version = "0.1.0"
edition = "2021"
description = "Rigorous engineering problem-solving with AI agents"

[[bin]]
name = "lisa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
serde_json = "1"
crossterm = "0.28"
dialoguer = "0.11"
base64 = "0.22"
chrono = "0.4"
regex = "1"
